json files, md files

--- a/assets/data/TECH1_apple.json
+++ b/assets/data/TECH1_apple.json
@@ -1,6 +1,44 @@
 {
  "items": [
   {
+    "id": "KPa3MHmrTTaT5UCwIb-8EA",
+    "url": "http://jobmote.com/jobs/23048-remote-senior-mobile-application-developer",
+    "title": "Remote Senior Mobile Application Developer",
+    "tags": [
+      "DBG:surround``2W( OR(100,fulli,entir), remot)",
+      "DBG:surround``OR(we,team,compani,member,employe,develop,engin,workmat) 2W work W remot",
+      "DBG_TECH1:k/t/w:ios/apple/2",
+      "DBG_TECH1:k/t/w:ios/mobile/2",
+      "DBG_TECH1:techWeightMap:{python=0, other=0, dotnet=0, c=0, mobile=2, go=0, nodejs=0, bigdata-ml=0, ruby=0, apple=2, java=0, gamedev=0, php=0, embedded=0, frontend=0}",
+      "REMOTE1/100",
+      "TECH1/apple",
+      "TECH1/mobile",
+      "TITLE1/dev",
+      "TZ/unknown"
+    ],
+    "tagsNames1": [],
+    "tagsNames2": [
+      "apple",
+      "mobile"
+    ],
+    "hiringOrganization": {
+      "name": "DuckDuckGo",
+      "sameAs": "UNSET"
+    },
+    "salary": {
+      "currency": "UNSET",
+      "minValue": 0,
+      "maxValue": 0,
+      "info": "",
+      "unit": "UNSET",
+      "isEquity": false
+    },
+    "employmentType": "UNSET",
+    "published": "Aug 21, 2018 12:20:52 AM",
+    "validThrough": "Jan 1, 1970 1:00:00 AM",
+    "content": "<div><div><div></div></div><div><div><div><p>Job Description</p><p>We are a diverse team, working remotely from all around the world, coming together to work on a mission of raising the standard of trust online. We want your help, wherever you are!</p><p>Join the Mobile team as a remote <strong>Senior Mobile Application Developer</strong> and help shape the technology that powers the DuckDuckGo search experience. DuckDuckGo is headquartered in the US, but this role is open to everyone!</p><p>As part of our growing team, you will be collaborating with team members at all levels to identify and close major gaps in our products. Examples of projects you might work on include building out and improving mobile content blocking, improving installation conversion, or running experiments to investigate and improve the usability of our mobile apps. You will be directly responsible for mobile application features, taking ownership over product maintenance, and driving improvements.</p><p>We are fully-remote and seek to empower our team to be self-directed and self-motivated in their projects. If that seems awesome and you like the idea of our core values -- build trust, question assumptions, and validate direction -- you'll fit right in!</p><p><strong>What you will do:</strong></p><ul><li>Lead development of projects by taking vague problems, scoping them into high-impact projects, and executing them against a set of success criteria</li><li>Play a key role in improving the software architecture</li><li>Take responsibility for solving product issues - large and small.</li><li>Implement and/or create mobile solutions to improve apps directly.</li><li>Collaborate with peers on product brainstorms, technical design discussions, pair programming sessions and code reviews.</li><li>Write pragmatic, testable code that works consistently and is performant.</li></ul><p><strong>What we are looking for:</strong></p><ul><li>Significant mobile engineering experience (4+ years).</li><li>Expertise on iOS (cross-platform expertise is a plus!).</li><li>Experience working on at least one large application.</li><li>Effective project management skills.</li><li>Familiarity with MVC/MVVC concepts and how they apply to mobile applications.</li><li>Familiarity with mobile threading and memory management.</li><li>Ability to develop and use complicated data structures and algorithms. This includes understanding the fundamentals, as well as navigating and improving existing code.</li><li>Ability to develop effective UX solutions through user feedback loops, leveraging both quantitative and qualitative metrics.</li><li>Creative problem solvers and risk takers. You like to take initiative in pushing a project forward, but know when to get others involved.</li><li>Strong communication skills. You can validate and communicate your decisions clearly.</li></ul><p><strong>Other things to know:</strong></p><ul><li>We are a small, remote team in different time zones and communicate with a variety of tools throughout the day. You should feel comfortable with the intricacies of this type of work situation.</li><li>Sometimes we meet up! You can expect to travel at least 2x a year: once for our all-hands meetup and another for a team retreat (each ~4-5 days)</li><li>We want to have a major impact on raising the standard of trust online. To do this, we believe in a focused approach, with company-wide objectives, and with each team member working on a single top priority at a time.</li><li>Our work philosophy is built upon empowered project management. All team members have opportunities to run projects.</li><li>All projects are run transparently, and we encourage everyone to participate in areas of interest throughout the company. Anyone and everyone can (and should) ask questions and offer feedback around the product and internal projects.</li><li>We try to exemplify our values (build trust, question assumptions, and validate direction) in everything we do.</li></ul><p>If you think you might thrive in this environment, we would love to hear from you. Use the application below to apply!</p><p></p></div></div><div></div></div></div>"
+  },
+  {
     "id": "UDjxU-8NR2mc0_IrsNr_YA",
     "url": "http://jobmote.com/jobs/22934-remote-senior-ios-engineer",
     "title": "REMOTE Senior iOS Engineer",
