json files, md files

--- a/assets/data/TECH1_apple.json
+++ b/assets/data/TECH1_apple.json
@@ -36,6 +36,7 @@
       "maxValue": 0,
       "info": "",
       "unit": "UNSET",
+      "parser": "UNSET",
       "isEquity": false
     },
     "employmentType": "UNSET",
@@ -89,6 +90,7 @@
       "maxValue": 0,
       "info": "",
       "unit": "UNSET",
+      "parser": "UNSET",
       "isEquity": false
     },
     "employmentType": "UNSET",
@@ -131,6 +133,7 @@
       "maxValue": 115000,
       "info": "Equity",
       "unit": "YEAR",
+      "parser": "UNSET",
       "isEquity": false
     },
     "employmentType": "UNSET",
@@ -178,6 +181,7 @@
       "maxValue": 0,
       "info": "",
       "unit": "UNSET",
+      "parser": "UNSET",
       "isEquity": false
     },
     "employmentType": "UNSET",
@@ -247,6 +251,7 @@
       "maxValue": 0,
       "info": "3.0% – 1.0%",
       "unit": "UNSET",
+      "parser": "UNSET",
       "isEquity": false
     },
     "employmentType": "UNSET",
@@ -303,6 +308,7 @@
       "maxValue": 0,
       "info": "3.0% – 1.0%",
       "unit": "UNSET",
+      "parser": "UNSET",
       "isEquity": false
     },
     "employmentType": "UNSET",
@@ -360,6 +366,7 @@
       "maxValue": 0,
       "info": "3.0% – 1.0%",
       "unit": "UNSET",
+      "parser": "UNSET",
       "isEquity": false
     },
     "employmentType": "UNSET",
@@ -407,6 +414,7 @@
       "maxValue": 0,
       "info": "",
       "unit": "UNSET",
+      "parser": "UNSET",
       "isEquity": false
     },
     "employmentType": "UNSET",
@@ -458,6 +466,7 @@
       "maxValue": 0,
       "info": "3.0% – 1.0%",
       "unit": "UNSET",
+      "parser": "UNSET",
       "isEquity": false
     },
     "employmentType": "UNSET",
@@ -496,6 +505,7 @@
       "maxValue": 0,
       "info": "",
       "unit": "UNSET",
+      "parser": "UNSET",
       "isEquity": false
     },
     "employmentType": "UNSET",
@@ -533,6 +543,7 @@
       "maxValue": 0,
       "info": "",
       "unit": "UNSET",
+      "parser": "UNSET",
       "isEquity": false
     },
     "employmentType": "UNSET",
