json files, md files

--- a/assets/data/TECH1_apple.json
+++ b/assets/data/TECH1_apple.json
@@ -1,6 +1,67 @@
 {
  "items": [
   {
+    "id": "M_9Ay5b8R-2mHO2qOK5T6w",
+    "url": "http://workinstartups.com/job-board/job/72423/ios-developer-at-abacus-adtech/",
+    "title": "iOS Developer",
+    "tags": [
+      "DBG:surround``3N( OR(feasibl,OR(consid,consider),option,occas,opportun,possibl,abil), OR(3N(remot, work),telecommut,2N(work,home)) ) NOT OR(regularli, abracadabra)",
+      "DBG:surround``OR(locat, base, resid) 3W OR(berlin, london, pari)",
+      "DBG_TECH1:k/t/w:android/java/1",
+      "DBG_TECH1:k/t/w:android/mobile/2",
+      "DBG_TECH1:k/t/w:core-data/apple/8",
+      "DBG_TECH1:k/t/w:go/go/3",
+      "DBG_TECH1:k/t/w:ios/apple/6",
+      "DBG_TECH1:k/t/w:ios/mobile/6",
+      "DBG_TECH1:k/t/w:objective-c/apple/3",
+      "DBG_TECH1:k/t/w:objective-c/c/2",
+      "DBG_TECH1:k/t/w:objective-c/mobile/8",
+      "DBG_TECH1:k/t/w:swift/apple/5",
+      "DBG_TECH1:k/t/w:swift/mobile/8",
+      "DBG_TECH1:techWeightMap:{python=0, other=0, dotnet=0, c=2, mobile=24, go=3, nodejs=0, bigdata-ml=0, ruby=0, apple=22, java=1, gamedev=0, php=0, embedded=0, frontend=0}",
+      "REMOTE1/50",
+      "TECH1/apple",
+      "TECH1/mobile",
+      "TITLE1/dev",
+      "TZ/Europe"
+    ],
+    "tagsNames1": [
+      "50% remote",
+      "European time zones"
+    ],
+    "tagsNames2": [
+      "apple",
+      "mobile"
+    ],
+    "hiringOrganization": {
+      "name": "Abacus AdTech",
+      "sameAs": "UNSET"
+    },
+    "salary": {
+      "currency": "UNSET",
+      "minValue": 0,
+      "maxValue": 0,
+      "info": "",
+      "unit": "UNSET",
+      "parser": "UNSET",
+      "isEquity": false
+    },
+    "employmentType": "UNSET",
+    "published": "Aug 28, 2018 1:40:14 PM",
+    "validThrough": "Jan 1, 1970 1:00:00 AM",
+    "content": "As the iOS Developer you will be one of the first hires in the software team alongside the Android Developer and have the opportunity to put your stamp on a product which is going to be a global disrupter in the AdTech environment. Opportunity to move into a CTO role based on performance and experience.<br /><br />SKILLS & REQUIREMENTS<br />Native iOS development: Swift and Objective-C<br />Architectural Design Patterns : MVC, MVP, MVVM, VIPER<br />UNIT testing with XCTEST, UI Tests<br />Persistence with CORE data<br />Agile development: design patterns, OOD, emergent architecture, tools like JIRA/Confluence, TDD<br />Continuous integration and deployment: Git, Bitrise, Fastlane, Jenkins, Go, Travis, etc.<br />Willingness to collaborate to develop solutions with others in a continuous and iterative delivery cycle<br />Ability to cope in ambiguity and forge your own path in lockstep with your team<br />Exceptional written and verbal communication skills: able to inspire and influence team members<br />Web services, Micro Services, Restful APIs, JSON, SOAP, XML/RPC<br /><br />Responsibilities:<br />Encourage standard development environments and workflows<br />Help the Lead developer optimise all technical processes to ensure documentation is accurate and up to date<br />Working on the back end of websites and training those more junior to understand the process<br />Developing new features for our websites<br />Integrating with third party APIs<br />Front end development<br />Assisting the producer with technical specifications and project viability / planning<br />To support production team with live projects and to support sales and marketing to understand client requirements * Debugging and resolving issues<br />Improving test coverage, procedure and documentation<br /><br />Package:<br />£25-40k basic DOE plus 2x £5k (semi-annual) target based bonus<br />25 days holiday + bank holidays<br />25% Christmas Bonus (on monthly basic)<br />Profit share Regional Bonus after 12 months service<br />Profit share Company Bonus after 12 months service<br /><br />The company would consider applicants home-working for an initial period of up to 3 months if you are based outside of London. We will only consider applications from those eligible to work in the UK. Graduates are encouraged to apply.",
+    "place1": {
+      "locality": "UNSET",
+      "region": "UNSET",
+      "country": "UNSET"
+    },
+    "place2": {
+      "locality": "UNSET",
+      "region": "UNSET",
+      "country": "UNSET"
+    }
+  },
+  {
     "id": "Az-JXSEpTWWZkr6NL7_wmg",
     "url": "https://www.workingnomads.co/jobs/software-engineer-ios-remote-numbrs-personal-finance-ag",
     "title": "Software Engineer, iOS - Remote",
