json files, md files

--- a/assets/data/TECH1_apple.json
+++ b/assets/data/TECH1_apple.json
@@ -1,6 +1,71 @@
 {
  "items": [
   {
+    "id": "9_9yGFo0Tdi1qbPvVt7Bpg",
+    "url": "https://angel.co/scal-io/jobs/7304-sr-ios-engineer",
+    "title": "Sr. iOS Engineer",
+    "tags": [
+      "Contract",
+      "DBG:surround``2N(remot, posit)",
+      "DBG_TECH1:k/t/w:android/java/1",
+      "DBG_TECH1:k/t/w:android/mobile/2",
+      "DBG_TECH1:k/t/w:computer-vision/bigdata-ml/8",
+      "DBG_TECH1:k/t/w:ios/apple/12",
+      "DBG_TECH1:k/t/w:ios/mobile/12",
+      "DBG_TECH1:k/t/w:javascript/frontend/2",
+      "DBG_TECH1:k/t/w:javascript/nodejs/2",
+      "DBG_TECH1:k/t/w:node.js/nodejs/13",
+      "DBG_TECH1:k/t/w:python/python/2",
+      "DBG_TECH1:k/t/w:scala/java/3",
+      "DBG_TECH1:k/t/w:swift/apple/15",
+      "DBG_TECH1:k/t/w:swift/mobile/24",
+      "DBG_TECH1:techWeightMap:{python=2, other=0, dotnet=0, c=0, mobile=38, go=0, nodejs=15, bigdata-ml=8, ruby=0, apple=27, java=4, gamedev=0, php=0, embedded=0, frontend=2}",
+      "Mobile Developer",
+      "REMOTE1/100",
+      "Remote OK",
+      "San Francisco",
+      "Software Engineer",
+      "Swift",
+      "TECH1/apple",
+      "TECH1/mobile",
+      "TITLE1/dev",
+      "TZ/unknown",
+      "iOS Development"
+    ],
+    "tagsNames1": [],
+    "tagsNames2": [
+      "apple",
+      "mobile"
+    ],
+    "hiringOrganization": {
+      "name": "Scal.io",
+      "sameAs": "https://angel.co/job_lists/1/browse_startups_table?startups[]=75193&listings[0][]=67039&listings[0][]=7304&listings[0][]=7305"
+    },
+    "salary": {
+      "currency": "$",
+      "minValue": 60000,
+      "maxValue": 110000,
+      "info": "0.05% – 2.0%",
+      "unit": "YEAR",
+      "parser": "UNSET",
+      "isEquity": false
+    },
+    "employmentType": "UNSET",
+    "published": "Aug 29, 2018 1:48:04 AM",
+    "validThrough": "Jan 1, 1970 1:00:00 AM",
+    "content": "<div><h2>Sr. iOS Engineer at Scal.io</h2><div>San Francisco, Remote · Contract</div><div></div></div><div><div>Skills</div><div>iOS Development, Swift</div><div>Compensation</div><div>$60K–$110K<br>0.05%–2.0%</div><div>Visa Sponsorship</div><div>Not available</div></div><h3>Job Description</h3><div><p>Scal.io is a leading software development studio headquartered in downtown San Francisco with remote offices in Orange County and Atlanta. We've designed and developed systems, services and applications used daily by millions of people. From iOS and Android, to web-scale architectures in Javascript and Python, our engineers have worked across all technologies and stacks. We’ve developed software for a broad range of industries in entertainment, e-commerce, education, news, health, financial, media, real estate and government for companies such as Google, Uber, Yahoo, 23andMe, Brit+Co and Digg. We’ve partnered with numerous international organizations, think tanks, and NGOs to develop innovative technology for global markets.</p><p>We are currently seeking talented senior level iOS engineer to join our professional, internationally distributed engineering team. This is a full-time remote position.</p><p>Required Skills and Experience:</p><p>-- 5+ years of iOS development experience <br>-- 2+ years of Swift experience<br>-- CocoaPods/Carthage expertise<br>-- Strong working knowledge of Git (Git Flow, pull requests, etc)<br>-- Ability to read and understand English software requirements, strong written  <br>-- English, ability to conduct a basic interview in English<br>-- Bachelor’s Degree in Computer Science, Applied Mathematics, Electrical Engineering, etc or equivalent experience</p><p>Nice To Have Skills and Experience:</p><p>-- Functional Reactive Programming experience with RxSwift/RxCocoa <br>-- Experience with pods: Moya / Alamofire, MarkupKit<br>-- AWS cloud expertise<br>-- Continuous Integration experience with CircleCI or similar<br>-- Backend experience with NodeJS + Hapi or Scala + Finagle<br>-- Strong Verbal English Skills</p><p>Job Perks:</p><p>-- Work with a variety of clients including Fortune 500 and leading tech companies<br>-- Top of Market Pay for the right candidate (in USD)<br>-- Full-time remote position<br>-- Flexible working hours<br>-- Very professional team</p><p>Along with your cv, please, send us the links to the relevant code samples (Swift, Javascript, etc) and/or links to recent projects.</p><p>We also love likes on our Facebook page if you feel inclined. :)</p><p>   <a href='https://www.facebook.com/ScalioLabs/' rel='nofollow'>https://www.facebook.com/ScalioLabs/</a></p><p>We kindly ask agencies not to bother applying.</p></div>",
+    "place1": {
+      "locality": "UNSET",
+      "region": "UNSET",
+      "country": "UNSET"
+    },
+    "place2": {
+      "locality": "UNSET",
+      "region": "UNSET",
+      "country": "UNSET"
+    }
+  },
+  {
     "id": "M_9Ay5b8R-2mHO2qOK5T6w",
     "url": "http://workinstartups.com/job-board/job/72423/ios-developer-at-abacus-adtech/",
     "title": "iOS Developer",
