json files, md files

--- a/assets/data/TECH1_apple.json
+++ b/assets/data/TECH1_apple.json
@@ -1,6 +1,67 @@
 {
  "items": [
   {
+    "id": "u2hXuhEqQn6ik0b9DylpuA",
+    "url": "https://remote.co/job/ios-macos-developer/",
+    "title": "iOS/macOS Developer",
+    "tags": [
+      "DBG:surround``2N(work,remot) 9W OR(travel,visit)",
+      "DBG:surround``3N( 2N(work,remot), OR(us,across,globe,world,planet,100,set 3W hour) )",
+      "DBG:surround``OR(locat, anywher, base, resid) 7W OR(germani, unitedkingdom, austria, croatia, hrvatska, denmark, franc, ireland, netherland, spain, sweden, switzerland)",
+      "DBG_TECH1:k/t/w:c/c/5",
+      "DBG_TECH1:k/t/w:cocoa/apple/16",
+      "DBG_TECH1:k/t/w:ios/apple/6",
+      "DBG_TECH1:k/t/w:ios/mobile/6",
+      "DBG_TECH1:k/t/w:macos/apple/6",
+      "DBG_TECH1:k/t/w:objective-c/apple/6",
+      "DBG_TECH1:k/t/w:objective-c/c/4",
+      "DBG_TECH1:k/t/w:objective-c/mobile/16",
+      "DBG_TECH1:k/t/w:swift/apple/10",
+      "DBG_TECH1:k/t/w:swift/mobile/16",
+      "DBG_TECH1:techWeightMap:{python=0, other=0, dotnet=0, c=9, mobile=38, go=0, nodejs=0, bigdata-ml=0, ruby=0, apple=44, java=0, gamedev=0, php=0, embedded=0, frontend=0}",
+      "REMOTE1/50",
+      "TECH1/apple",
+      "TECH1/mobile",
+      "TITLE1/dev",
+      "TZ/Europe"
+    ],
+    "tagsNames1": [
+      "50% remote",
+      "European time zones"
+    ],
+    "tagsNames2": [
+      "apple",
+      "mobile"
+    ],
+    "hiringOrganization": {
+      "name": "Cultured Code",
+      "sameAs": "UNSET"
+    },
+    "salary": {
+      "currency": "UNSET",
+      "minValue": 0,
+      "maxValue": 0,
+      "info": "",
+      "unit": "UNSET",
+      "parser": "UNSET",
+      "isEquity": false
+    },
+    "employmentType": "UNSET",
+    "published": "Aug 30, 2018 3:03:17 PM",
+    "validThrough": "Jan 1, 1970 1:00:00 AM",
+    "content": "<h2>iOS/macOS Developer at <span>Cultured Code</span></h2><div><span><i></i> Remote</span>         | <span> International </span></div><div>            <p>You’ll have to consider the architecture of new and existing features as you work. Build with long term maintainability in mind. Follow design patterns, but only when they’re useful. Think clearly and tell us when we’re wrong.</p><p>The apps are written in Objective-C and Swift, with a little C thrown in. You’ll need to understand memory management. Analyze performance with instruments. Write unit tests. Argue with us about git clients. Have an opinion on vi – or not :).</p><p>But above all, maintain empathy towards the users. Produce something excellent. Care about your work.</p><p>This is a coding position, but it’s not entry-level. We’re after someone with solid development experience, but it doesn’t have to be on iOS/Mac platforms. If you’ve never programmed in Swift/Objective-C/Cocoa before, that’s fine. We care much more about general abilities than knowledge of specific frameworks. But then you have to show us that you’re the kind of person who learns a new programming language over breakfast. Tell us what awesome things you’ve done in the past, and send us some sample code that shows off your abilities.</p><p>If you do have prior experience with Cocoa, even better! Tell us about the apps you’ve worked on and send us some code that you’re proud of. Alternatively – or additionally – you’re invited to download our&nbsp;<a href='https://culturedcode.com/frozen/2018/08/Tasks.zip' rel='nofollow'>sample project</a>, follow the instructions inside, and then send us your refactored work.</p><p>Our office is in Stuttgart, so if you’re looking for an opportunity to spend some time in the heart of Europe, fantastic, we have a desk waiting for you! Otherwise working remotely (and visiting us a few times a year) would be completely fine, too.</p><p>Ultimately, Cultured Code is a place where you’ll have an opportunity to do something excellent, and we aim to employ people who want to strive for that as part of a team. If you share our values and have a great skill-set then we hope you’ll get in touch!</p><p>We’re accepting applications until September 16.</p><p>—</p><h4><strong>COMPANY INFO</strong></h4><p>At Cultured Code, we’re passionate about productivity, simplicity, and beautiful design. Things is our award-winning combination of these three interests into one fine product. Last year we launched Things 3, and it’s been a resounding success. Things has won its second Apple Design Award, and has seen six major updates in the past year. We’re now looking to expand our team to keep up the pace.</p><p>Our company is based out of Stuttgart, in southern Germany, and currently consists of seven people. We’re a truly international team, hailing from Germany, Poland, Australia, Brazil, and Canada. Our company language is English.</p><p>It’s an exciting time to be at Cultured Code – we have some great plans for the future, and challenging things to work on. We hope you’ll consider joining our team, and being part of our story.</p>        </div><div>        <a href='https://cultured-code.breezy.hr/p/464ee8c1ade901-ios-macos-developer?source=remoteco' rel='nofollow'>Apply for job</a>    </div>",
+    "place1": {
+      "locality": "UNSET",
+      "region": "UNSET",
+      "country": "UNSET"
+    },
+    "place2": {
+      "locality": "UNSET",
+      "region": "UNSET",
+      "country": "UNSET"
+    }
+  },
+  {
     "id": "9_9yGFo0Tdi1qbPvVt7Bpg",
     "url": "https://angel.co/scal-io/jobs/7304-sr-ios-engineer",
     "title": "Sr. iOS Engineer",
