--- a/assets/data/TITLE1_unknown.json
+++ b/assets/data/TITLE1_unknown.json
@@ -1,6 +1,201 @@
 {
  "items": [
   {
+    "id": "aWefytKuQyusOEYWXxN_KQ",
+    "url": "https://remote.co/job/english-translator/",
+    "title": "English Translator",
+    "tags": [
+      "DBG:surround``home W base",
+      "DBG_TECH1:k/t/w:arm/embedded/8",
+      "DBG_TECH1:k/t/w:layout/frontend/5",
+      "DBG_TECH1:techWeightMap:{python=0, other=0, dotnet=0, c=0, mobile=0, go=0, nodejs=0, bigdata-ml=0, ruby=0, apple=0, java=0, gamedev=0, php=0, embedded=8, frontend=5}",
+      "REMOTE1/100",
+      "TECH1/embedded",
+      "TITLE1/unknown",
+      "TZ/unknown"
+    ],
+    "tagsNames1": [
+      "undefined job title"
+    ],
+    "tagsNames2": [
+      "embedded"
+    ],
+    "hiringOrganization": {
+      "name": "United Nations Office for Project Services - UNOPS",
+      "sameAs": "UNSET"
+    },
+    "salary": {
+      "currency": "UNSET",
+      "minValue": 0,
+      "maxValue": 0,
+      "info": "",
+      "unit": "UNSET",
+      "parser": "UNSET",
+      "isEquity": false
+    },
+    "employmentType": "UNSET",
+    "published": "Aug 30, 2018 5:48:47 PM",
+    "validThrough": "Jan 1, 1970 1:00:00 AM",
+    "content": "<h2>English Translator at <span>United Nations Office for Project Services - UNOPS</span></h2><div><span><i></i> Remote</span>         | <span> Freelance </span> | <span> International </span></div><div>            <p><strong>Job categories:</strong> Communications</p><p><strong>Vacancy code:</strong> VA/2018/B0048/16305</p><p><strong>Level:</strong> ICS-8</p><p><strong>Department/office:</strong> CG, Communications Group</p><p><strong>Duty station: Home based</strong></p><p><strong>Contract type: </strong>International ICA</p><p><strong>Contract level:</strong> IICA-1</p><p><strong>Duration:</strong> Open-ended</p><p>Applications to vacancies must be received before midnight Copenhagen time (CET) on the closing date of the announcement.</p><p>The overall supervision of the role will be under the responsibility of UNOPS HQ Communications Group (CG) in Copenhagen, although the incumbent may also translate materials for other groups. CG is responsible for producing and disseminating information about UNOPS to external audiences, as well as facilitating the flow of information within the organization, ensuring efficient information delivery and broad sharing of knowledge and best practices.</p><p>The incumbent is responsible to abide by security policies, administrative instructions, plans and procedures of the UN Security Management System and that of UNOPS. UNOPS is committed to achieving a truly diverse workforce.</p><p><strong>Functional Responsibilities</strong></p><p>The English Translator will be a home-based retainer and will report to the CG Translation Coordinator. The incumbent will be responsible for translating internal and external documents for print and web and assisting the CG translation team in their goals when translating material for the organization. Specific responsibilities include, but are not limited to:</p><ul><li>Translate materials from source language into English ensuring that all deadlines are met.</li><li>Produce self-revised translations and revise documents translated by others when required.</li><li>Provide accurate, faithful and timely translation of documents into the target language. Respect the source layout when required.</li><li>Liaise with colleagues who have translation responsibilities in order to ensure good quality translation as well as the use of preferred UN/UNOPS terminology and reference material.</li><li>Perform other related duties as required</li><li>The incumbent will be offered a retainer contract, i.e. one issued for a period of time during which the services of the Individual Contractor will be required to work when and as required. There is no expectation of a minimum number of working days, and the workload will depend on the translation needs of CPG.</li><li>The incumbent is expected to check his/her email on a regular basis and commits to being able to reply to any job requests within a reasonable amount of time.</li></ul><p><strong>The incumbent will need to be able to translate a minimum of 240 words per hour (1,920 words per working day).</strong></p><p><strong>Competencies</strong></p><ul><li>Treats all individuals with respect; responds sensitively to differences and encourages others to do the same. Upholds organizational and ethical norms. Maintains high standards of trustworthiness. Role model for diversity and inclusion.</li><li>Acts as a positive role model contributing to the team spirit. Collaborates and supports the development of others.&nbsp;<strong>For people managers only:</strong>&nbsp;Acts as positive leadership role model, motivates, directs and inspires others to succeed, utilizing appropriate leadership styles.</li><li>Demonstrates understanding of the impact of own role on all partners and always puts the end beneficiary first. Builds and maintains strong external relationships and is a competent partner for others (if relevant to the role).</li><li>Efficiently establishes an appropriate course of action for self and/or others to accomplish a goal. Actions lead to total task accomplishment through concern for quality in all areas. Sees opportunities and takes the initiative to act on them. Understands that responsible use of resources maximizes our impact on our beneficiaries.</li><li>Open to change and flexible in a fast paced environment. Effectively adapts own approach to suit changing circumstances or requirements. Reflects on experiences and modifies own behavior. Performance is consistent, even under pressure. Always pursues continuous improvements.</li><li>Evaluates data and courses of action to reach logical, pragmatic decisions. Takes an unbiased, rational approach with calculated risks. Applies innovation and creativity to problem-solving.</li><li>Expresses ideas or facts in a clear, concise and open manner. Communication indicates a consideration for the feelings and needs of others. Actively listens and proactively shares knowledge. Handles conflict effectively, by overcoming differences of opinion and finding common ground.</li></ul><p><strong>Education/Experience/Language requirements</strong></p><p><strong>Education</strong></p><ul><li><strong>University Degree (bachelor level) in translation or other relevant discipline is required;</strong></li></ul><p><strong>Experience</strong></p><ul><li>Minimum 2 years of translation experience are required.</li><li>Proficiency in working with Microsoft Office applications is desired</li><li>Experience working with CAT Tools is highly desired</li><li>UN/UNOPS experience is an asset</li></ul><p><strong>Language requirements</strong></p><ul><li>Full proficiency in English is required</li><li>Advanced knowledge of one of the following UN official languages: Arabic, Chinese, French, Russian, Spanish, or Portuguese is a requirement.</li></ul><p><strong>Contract type, level and duration</strong></p><p><strong>Contract type:</strong> ICA<br><strong>Contract level:</strong> I-ICA1<br><strong>Contract duration:</strong> Ongoing ICA Open-ended, subject to organizational requirements, availability of funds and satisfactory performance</p><p>For more details about the ICA contractual modality, please follow this link:<br>https://www.unops.org/english/Opportunities/job-opportunities/what-we-offer/Pages/Individual-Contractor-Agreements.aspx</p><p><strong>Additional Considerations</strong></p><ul><li>Please note that the closing date is midnight Copenhagen time</li><li>Applications received after the closing date will not be considered.</li><li>Only those candidates that are short-listed for interviews will be notified.</li><li>Qualified female candidates are strongly encouraged to apply.</li><li>Work life harmonization – UNOPS values its people and recognizes the importance of balancing professional and personal demands. We have a progressive policy on work-life harmonization and offer several flexible working options. This policy applies to UNOPS personnel on all contract types</li><li>For staff positions only, UNOPS reserves the right to appoint a candidate at a lower level than the advertised level of the post</li><li>The incumbent is responsible to abide by security policies, administrative instructions, plans and procedures of the UN Security Management System and that of UNOPS.</li></ul><p><em>It is the policy of UNOPS to conduct background checks on all potential recruits/interns.<br>Recruitment/internship in UNOPS is contingent on the results of such checks.</em></p><p><strong>Background Information – UNOPS</strong></p><p>UNOPS is an operational arm of the United Nations, supporting the successful implementation of its partners’ peacebuilding, humanitarian and development projects around the world. Our mission is to help people build better lives and countries achieve sustainable development.</p><p>UNOPS areas of expertise cover infrastructure, procurement, project management, financial management and human resources.</p><p><strong>Working with us</strong></p><p>UNOPS offers short- and long-term work opportunities in diverse and challenging environments across the globe. We are looking for creative, results-focused professionals with skills in a range of disciplines.</p><p><strong>Diversity</strong></p><p>With over 4,000 UNOPS personnel and approximately 7,000 personnel recruited on behalf of UNOPS partners spread across 80 countries, our workforce represents a wide range of nationalities and cultures. We promote a balanced, diverse workforce a strength that helps us better understand and address our partners’ needs, and continually strive to improve our gender balance through initiatives and policies that encourage recruitment of qualified female candidates.</p><p><strong>Work life harmonization</strong></p><p>UNOPS values its people and recognizes the importance of balancing professional and personal demands.</p>        </div><div>        <a href='https://jobs.unops.org/Pages/ViewVacancy/VADetails.aspx?id=16305' rel='nofollow'>Apply for job</a>    </div>",
+    "place1": {
+      "locality": "UNSET",
+      "region": "UNSET",
+      "country": "UNSET"
+    },
+    "place2": {
+      "locality": "UNSET",
+      "region": "UNSET",
+      "country": "UNSET"
+    }
+  },
+  {
+    "id": "pNSuV552Sq2LURkscul05w",
+    "url": "https://remote.co/job/medical-transcriptionist-15/",
+    "title": "Medical Transcriptionist",
+    "tags": [
+      "DBG:surround``home W base",
+      "REMOTE1/100",
+      "TECH1/unknown",
+      "TITLE1/unknown",
+      "TZ/unknown"
+    ],
+    "tagsNames1": [
+      "undefined job title"
+    ],
+    "tagsNames2": [
+      "unknown"
+    ],
+    "hiringOrganization": {
+      "name": "Acusis",
+      "sameAs": "UNSET"
+    },
+    "salary": {
+      "currency": "UNSET",
+      "minValue": 0,
+      "maxValue": 0,
+      "info": "",
+      "unit": "UNSET",
+      "parser": "UNSET",
+      "isEquity": false
+    },
+    "employmentType": "UNSET",
+    "published": "Aug 30, 2018 4:05:17 PM",
+    "validThrough": "Jan 1, 1970 1:00:00 AM",
+    "content": "<h2>Medical Transcriptionist at <span>Acusis</span></h2><div><span><i></i> Remote</span>        </div><div>            <h3>Medical Transcription</h3><ul><li>Medical Transcription</li><li><strong>Title:</strong>Medical Transcriptionist</li><li><strong>Experience level:&nbsp;</strong>3 years’ experience</li><li><strong>Location:</strong>&nbsp;Home Based</li><li><strong>Type:</strong>&nbsp;<strong>Full-time &amp; Part time employment</strong></li></ul><p>Acusis is a leading service provider of quality medical transcription services to a nationwide client base. We are always seeking motivated candidates who are committed to teamwork and quality excellence to join our team.</p><ul><li>Full-time &amp; Part time positions are open</li><li>Must be proficient in MS Word</li><li>Excellent grammatical and internet research skills</li><li>Minimum 3 years of experience in medical transcription</li><li>Ability to transcribe from various dictators and multiple specialties preferred</li><li>Hardware/Software required: PC with at least 1 GB of RAM, Microsoft Office Version 2003 or any newer version, and up-to-date virus scanner required.</li></ul><p>Working hours depend on shift availability at the time of candidate’s application. Acusis provides competitive compensation based on experience and performance.</p>        </div><div>        <a href='http://www.acusis.com/careers/medical-transcription#careers' rel='nofollow'>Apply for job</a>    </div>",
+    "place1": {
+      "locality": "UNSET",
+      "region": "UNSET",
+      "country": "UNSET"
+    },
+    "place2": {
+      "locality": "UNSET",
+      "region": "UNSET",
+      "country": "UNSET"
+    }
+  },
+  {
+    "id": "fo8dYpogRQWqN9iT0ZoGMA",
+    "url": "https://angel.co/forkable/jobs/129546-city-launcher",
+    "title": "City Launcher",
+    "tags": [
+      "Attorney",
+      "DBG:surround``fulltim 4N remot",
+      "Full Time",
+      "New York City",
+      "Operations",
+      "REMOTE1/100",
+      "Remote OK",
+      "TECH1/unknown",
+      "TITLE1/unknown",
+      "TZ/unknown",
+      "User Researcher"
+    ],
+    "tagsNames1": [
+      "undefined job title"
+    ],
+    "tagsNames2": [
+      "unknown"
+    ],
+    "hiringOrganization": {
+      "name": "Forkable",
+      "sameAs": ""
+    },
+    "salary": {
+      "currency": "$",
+      "minValue": 40000,
+      "maxValue": 80000,
+      "info": "0.0% – 1.5%",
+      "unit": "YEAR",
+      "parser": "UNSET",
+      "isEquity": false
+    },
+    "employmentType": "UNSET",
+    "published": "Aug 30, 2018 1:49:48 AM",
+    "validThrough": "Jan 1, 1970 1:00:00 AM",
+    "content": "<div><h2>City Launcher at Forkable</h2><div>New York City, Remote · Full Time</div></div><div><div>Compensation</div><div>$40K–$80K<br>0.0%–1.5%</div><div>Visa Sponsorship</div><div>Not available</div></div><h3>Job Description</h3><div><p>Help us bring Forkable to the world! Being a city launcher is like being a serial entrepreneur. You need to be very versatile, with lots of grit, attention to detail, initiative, and resourcefulness. And you should definitely like to travel!</p></div>",
+    "place1": {
+      "locality": "UNSET",
+      "region": "UNSET",
+      "country": "UNSET"
+    },
+    "place2": {
+      "locality": "UNSET",
+      "region": "UNSET",
+      "country": "UNSET"
+    }
+  },
+  {
+    "id": "Uw-oz8y3Sa6R3CBmBXN-eg",
+    "url": "https://angel.co/forkable/jobs/129544-city-launcher",
+    "title": "City Launcher",
+    "tags": [
+      "Attorney",
+      "DBG:surround``fulltim 4N remot",
+      "Finance/Accounting",
+      "Full Time",
+      "Operations",
+      "REMOTE1/100",
+      "Remote OK",
+      "San Francisco",
+      "TECH1/unknown",
+      "TITLE1/unknown",
+      "TZ/unknown"
+    ],
+    "tagsNames1": [
+      "undefined job title"
+    ],
+    "tagsNames2": [
+      "unknown"
+    ],
+    "hiringOrganization": {
+      "name": "Forkable",
+      "sameAs": ""
+    },
+    "salary": {
+      "currency": "$",
+      "minValue": 40000,
+      "maxValue": 80000,
+      "info": "0.0% – 1.5%",
+      "unit": "YEAR",
+      "parser": "UNSET",
+      "isEquity": false
+    },
+    "employmentType": "UNSET",
+    "published": "Aug 30, 2018 1:49:48 AM",
+    "validThrough": "Jan 1, 1970 1:00:00 AM",
+    "content": "<div><h2>City Launcher at Forkable</h2><div>San Francisco, Remote · Full Time</div></div><div><div>Compensation</div><div>$40K–$80K<br>0.0%–1.5%</div><div>Visa Sponsorship</div><div>Not available</div></div><h3>Job Description</h3><div><p>Help us bring Forkable to the world! Being a city launcher is like being a serial entrepreneur. You need to be very versatile, with lots of grit, attention to detail, initiative, and resourcefulness. And you should definitely like to travel!</p></div>",
+    "place1": {
+      "locality": "UNSET",
+      "region": "UNSET",
+      "country": "UNSET"
+    },
+    "place2": {
+      "locality": "UNSET",
+      "region": "UNSET",
+      "country": "UNSET"
+    }
+  },
+  {
     "id": "O6QhklcQRsahBEN7n6mb-Q",
     "url": "https://remote.co/job/business-initiatives-consultant-3/",
     "title": "Business Initiatives Consultant 3",
